# examgenerator

./: .gitignore  MANIFEST.in  README.md  einstellungen.json  einstellungen_make_all.json  einstellungen_make_specific.json  etest_generator.py  examples  make_all.py  make_specific.py  pyproject.toml  requirements.txt  run_exam_generator.py  setup.py  templates
Aufgaben/: .gitignore  ETest-ET1-V01-0102-Loesung.tex  ETest-ET1-V01-0102.tex  ETest-ET1-V01-0304-Loesung.tex  ETest-ET1-V01-0304.tex  ETest-ET1-V07-0102-Loesung.tex  ETest-ET1-V07-0102.tex  ETest-ET1-V07-0304-Loesung.tex  ETest-ET1-V07-0304.tex  ETest-ET1-V21-0102-Loesung.tex  ETest-ET1-V21-0102.tex  ETest-ET1-V21-0304-Loesung.tex  ETest-ET1-V21-0304.tex
Einstellungen/: einstellungen.json
Module/: __init__.py  classPool.py  classTestTyp.py  func_baue_sumo.py  func_generiere_tex_dateien.py  func_kombination_aufgaben.py  func_kompilieren.py  make_specific.py
Modules/: __init__.py  classPool.py  classTestTyp.py  func_baue_sumo.py  func_generiere_tex_dateien.py  func_kombination_aufgaben.py  func_kompilieren.py  make_specific.py
Problems/: ETest-ET1-Test-0102-Loesung.tex  ETest-ET1-Test-0102.tex  ETest-ET1-Test-0304-Loesung.tex  ETest-ET1-Test-0304.tex  ETest-ET1-Test2-0102-Loesung.tex  ETest-ET1-Test2-0102.tex  ETest-ET1-Test2-0304-Loesung.tex  ETest-ET1-Test2-0304.tex  ETest-ET1-Test3-0102-Loesung.tex  ETest-ET1-Test3-0102.tex  ETest-ET1-Test3-0304-Loesung.tex  ETest-ET1-Test3-0304.tex
Settings/: settings_template.json
Templates/: template_aufgabe.tex
docs/: User_Doc.md
settings/: settings_ET1.json  (+4 more)
(+106 files in other folders)
